--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <section class="section">
+        <div class="navbar is-pulled-right">
+            <button class="button is-link is-rounded is-medium">Login</button>
+        </div>
         <div class="container">
             <h1 class="title">
                 Hello World!
