--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="section">
         <div class="navbar is-pulled-right">
-            <button class="button is-link is-rounded is-medium">Login</button>
+            <a href="login.php" class="button is-link is-rounded is-medium">Login</a>
         </div>
         <div class="container">
             <h1 class="title">
