--- a/common/login.html
+++ b/common/login.html
@@ -36,7 +36,7 @@
                         <label class="checkbox" style="margin: 20px;">
                             <input type="checkbox"> Husk mig
                         </label>
-                        <a href="index.html" class="button is-block is-large is-danger is-fullwidth">Login</a>
+                        <a href="../index.html" class="button is-block is-large is-danger is-fullwidth">Login</a>
                     </div>
                     <p class="has-text-grey-dark">
                         <a href="" style="color: inherit;">Opret bruger</a> &nbsp;·&nbsp;
