--- a/common/login.html
+++ b/common/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
-    <link rel="stylesheet" href="css/bulma.min.css">
-    <script src="js/jquery.min.js"></script>
+    <link rel="stylesheet" href="../css/bulma.min.css">
+    <script src="../js/jquery.min.js"></script>
     <title>My Bulma Project</title>
 </head>
 <body>
