--- a/common/login.html
+++ b/common/login.html
@@ -18,7 +18,7 @@
                     <p class="subtitle has-text-white">Her har du mulighed for at logge ind</p>
                     <div class="box">
                         <div class="box ">
-                            <img src="img/3.jpg">
+                            <img src="../img/3.jpg">
                         </div>
                         <div class="title has-text-grey is-5">Indtast venligst brugernavn og password</div>
                         <form>
