login virker + mere arbejde på hovedsiden

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>My Bulma Project</title>
 </head>
 <body>
+<!--     <nav class="navbar">
+        <div class="navbar-brand">
+            <div class="navbar-burger"></div>
+        </div>
+    </nav> -->
     <section class="section">
         <div class="navbar is-pulled-right">
             <a href="common/login.html" class="button is-link is-rounded is-medium">Login</a>
@@ -24,13 +29,22 @@
             <br>
             <br>
             <div class="columns">
-                <div class="column"><p class="notification is-danger">First column</p></div>
-                <div class="column"><p class="notification is-warning">Second column</p></div>
-                <div class="column"><p class="notification is-success">Third column</p></div>
-                <div class="column"><p class="notification is-info">Fourth column</p></div>
-                <div class="column"><p class="notification is-link">Fifth column</p></div>
+                <div class="column"><p class="notification is-danger">Hej med jer, Vestjysk Marketing!</p></div>
+                <div class="column"><p class="notification is-warning">Jeg håber i syntes om min hjemmeside :)</p></div>
+                <div class="column"><p class="notification is-success">Længere nede kan i finde min ansøgning og mit CV!</p></div>
+                <div class="column"><p class="notification is-info">Med venlig hilsen...</p></div>
+                <div class="column"><p class="notification is-link">Sebastian Slangerup!</p></div>
             </div>
         </div>
+
+    </section>
+    <section class="container">
+        <footer class="footer">
+            <div class="content has-text-centered level">
+                <a href="pdf/Ansøgning.pdf" target="_blank" class="button is-rounded is-focused is-link level-left is-large">Ansøgning</a>
+                <a href="" class="button is-rounded is-focused is-link level-right is-large">CV</a>
+            </div>
+        </footer>
     </section>
 </body>
 </html>
