--- a/common/login.html
+++ b/common/login.html
@@ -17,32 +17,35 @@
                     <hr class="login-hr">
                     <p class="subtitle has-text-white">Her har du mulighed for at logge ind</p>
                     <div class="box">
-                        <div class="box ">
-                            <img src="../img/3.jpg">
+                        <div class="box">
+                            <img src="../img/login.png">
                         </div>
                         <div class="title has-text-grey is-5">Indtast venligst brugernavn og password</div>
-                        <form>
+                        <form action="checkUser.php" method="POST">
                             <div class="field">
                                 <div class="control">
-                                    <input type="email" class="input is-large" placeholder="Brugernavn" autofocus="">
+                                    <input name="username" type="text" class="input is-large" placeholder="Brugernavn" autofocus="">
                                 </div>
                             </div>
                             <div class="field">
                                 <div class="control">
-                                    <input type="password" class="input is-large" placeholder="Password">
+                                    <input name="password" type="password" class="input is-large" placeholder="Password">
                                 </div>
                             </div>
-                        </form>
-                        <label class="checkbox" style="margin: 20px;">
-                            <input type="checkbox"> Husk mig
-                        </label>
-                        <a href="../index.html" class="button is-block is-large is-danger is-fullwidth">Login</a>
+                            <div class="field">
+                                <div class="control">
+                                    <input type="submit" name="LogInd" value="Login" class="button is-block is-large is-danger is-fullwidth"></input>
+                                </div>
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <a href="../index.html" class="button is-rounded is-warning">
+                                        <i class="fas fa-chevron-left"></i>&nbsp;&nbsp;Tilbage
+                                    </a>
+                                </div>
+                            </div>
+                        </form>                        
                     </div>
-                    <p class="has-text-grey-dark">
-                        <a href="" style="color: inherit;">Opret bruger</a> &nbsp;·&nbsp;
-                        <a href="" style="color: inherit;">Glemt adgangskode?</a> &nbsp;·&nbsp;
-                        <a href="" style="color: inherit;">Hjælp</a>
-                    </p>
                 </div>
             </div>
         </div>
