Snyde-loginside lavet

--- a/secretsite.html
+++ b/secretsite.html
@@ -3,9 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+    <link rel="stylesheet" href="css/bulma.min.css">
+    <script src="js/jquery.min.js"></script>
+    <title>My Bulma Project</title>
 </head>
 <body>
-    YOU FOUND THE HIDDEN TREASURE!
+<!--     <nav class="navbar">
+        <div class="navbar-brand">
+            <div class="navbar-burger"></div>
+        </div>
+    </nav> -->
+    <nav class="navbar is-dark has-shadow">
+        <div class="navbar-brand">
+            <div class="navbar-item is-size-4">
+                <b>Velkommen</b>
+            </div>
+        </div>
+        <div class="navbar-menu">
+            <div class="navbar-start">
+                <a href="pdf/Ansøgning.pdf" class="navbar-item">Ansøgning</a>
+                <a href="pdf/CV.pdf" class="navbar-item">CV</a>
+            </div>
+        </div>
+        <div class="navbar-end">
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" class="navbar-item">Secret Site</a>
+            <div class="navbar-item">
+                <div class="buttons">
+                    <a href="index.html" class="button is-link">Log Ud</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">
+                Vestjysk Marketing
+            </h1>
+            <p class="subtitle">
+                En simpel hjemmeside designet med <strong>Bulma</strong>!
+            </p>
+            <a href="https://i1.theportalwiki.net/img/thumb/0/0a/Portal_Cake.png/200px-Portal_Cake.png" target="_blank" class="button is-success is-medium is-rounded">Click here for cake!</a>
+            <br>
+            <br>
+            <div class="columns">
+                <div class="column is-size-5">
+                    <p class="content">Hej med jer, Vestjysk Marketing!</p>
+                    <p class="content">Jeg har designet en hjemmeside til at vise jer mine færdigheder i web udvikling.</p>
+                    <p class="content">Hjemmesiden er bygget ved hjælp af et CSS Framework kaldet Bulma, og med et strejf af php. <br> Jeg har også sat to knapper til siden med ansøgning og cv, så I nemt kan gå til dem fra hjemmesiden af.</p>
+                    <p class="content">Min loginside er lavet med PHP og phpMyAdmin databasen. <br> Når en værdi bliver udfyldt i formen, bliver den compared med de værdier der er i databasen. <br> Hvis den finder én værdi som stemmer overens, så fortsætter den videre til en "secret index" som stort set bare er index.html med nogle små ændringer, så det giver en illusion at man er logget ind. <br> Hvis den ikke finder nogen værdi meddeler den, at brugernavn og password er forkert.</p>
+                    <p class="content">Men jeg ville kunne lære en hel masse nye ting som elev hos jer!</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="container">
+        <footer class="footer">
+            <div class="content has-text-centered level">
+                <a href="pdf/Ansøgning.pdf" target="_blank" class="button is-rounded is-focused is-link level-left is-large">Ansøgning</a>
+                <a href="pdf/CV.pdf" class="button is-rounded is-focused is-link level-right is-large">CV</a>
+            </div>
+        </footer>
+    </section>
 </body>
 </html>
