--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
         <div class="navbar-menu">
             <div class="navbar-start">
-                <a href="pdf/Ansøgning.pdf" class="navbar-item">Ansøgning</a>
-                <a href="pdf/CV.pdf" class="navbar-item">CV</a>
+                <a href="pdf/SebastianSlangerup-Ansøgning.pdf" class="navbar-item">Ansøgning</a>
+                <a href="pdf/SebastianSlangerup-CV.pdf" class="navbar-item">CV</a>
             </div>
         </div>
         <div class="navbar-end">
@@ -52,7 +52,7 @@
                     <p class="content">Hej med jer, Vestjysk Marketing!</p>
                     <p class="content">Jeg har designet en hjemmeside til at vise jer mine færdigheder i web udvikling.</p>
                     <p class="content">Hjemmesiden er bygget ved hjælp af et CSS Framework kaldet Bulma, og med et strejf af php. <br> Jeg har også sat to knapper til siden med ansøgning og cv, så I nemt kan gå til dem fra hjemmesiden af.</p>
-                    <p class="content">Min loginside er lavet med PHP og phpMyAdmin databasen. <br> Når en værdi bliver udfyldt i formen, bliver den compared med de værdier der er i databasen. <br> Hvis den finder én værdi som stemmer overens, så fortsætter den videre til en "secret index" som stort set bare er index.html med nogle små ændringer, så det giver en illusion at man er logget ind. <br> Hvis den ikke finder nogen værdi meddeler den, at brugernavn og password er forkert.</p>
+                    <p class="content">Min loginside er lavet med PHP og phpMyAdmin. Desværre ligger databasen lokalt, så derfor er der ikke mulighed for at vise det. Men I er velkomne til at se filerne igennem. Den ligger i <strong>"common/checkUser.php"</strong>. <br> Når en værdi bliver udfyldt i formen, bliver den compared med de værdier der er i databasen. <br> Hvis den finder én værdi som stemmer overens, så fortsætter den videre til en "secret index" som stort set bare er index.html med nogle små ændringer, så det giver en illusion at man er logget ind. <br> Hvis den ikke finder nogen værdi meddeler den, at brugernavn og password er forkert.</p>
                     <p class="content">Selvfølgelig kan man altid bygge hjemmesiden op længere med f.eks en knap til at oprette en bruger, og en mere sikker måde at logge ind som undgår SQL injections og encrypter passwords, men så langt er jeg dog ikke i mit grundforløb :D</p>
                     <p class="content">Men jeg ville kunne lære en hel masse nye ting som elev hos jer!</p>
                 </div>
@@ -63,8 +63,8 @@
     <section class="container">
         <footer class="footer">
             <div class="content has-text-centered level">
-                <a href="pdf/Ansøgning.pdf" target="_blank" class="button is-rounded is-focused is-link level-left is-large">Ansøgning</a>
-                <a href="pdf/CV.pdf" class="button is-rounded is-focused is-link level-right is-large">CV</a>
+                <a href="pdf/SebastianSlangerup-Ansøgning.pdf" target="_blank" class="button is-rounded is-focused is-link level-left is-large">Ansøgning</a>
+                <a href="pdf/SebastianSlangerup-CV.pdf" class="button is-rounded is-focused is-link level-right is-large">CV</a>
             </div>
         </footer>
     </section>
