--- a/secretsite.html
+++ b/secretsite.html
@@ -22,8 +22,8 @@
         </div>
         <div class="navbar-menu">
             <div class="navbar-start">
-                <a href="pdf/Ansøgning.pdf" class="navbar-item">Ansøgning</a>
-                <a href="pdf/CV.pdf" class="navbar-item">CV</a>
+                <a href="pdf/SebastianSlangerup-Ansøgning.pdf" class="navbar-item">Ansøgning</a>
+                <a href="pdf/SebastianSlangerup-CV.pdf" class="navbar-item">CV</a>
             </div>
         </div>
         <div class="navbar-end">
@@ -61,8 +61,8 @@
     <section class="container">
         <footer class="footer">
             <div class="content has-text-centered level">
-                <a href="pdf/Ansøgning.pdf" target="_blank" class="button is-rounded is-focused is-link level-left is-large">Ansøgning</a>
-                <a href="pdf/CV.pdf" class="button is-rounded is-focused is-link level-right is-large">CV</a>
+                <a href="pdf/SebastianSlangerup-Ansøgning.pdf" target="_blank" class="button is-rounded is-focused is-link level-left is-large">Ansøgning</a>
+                <a href="pdf/SebastianSlangerup-CV.pdf" class="button is-rounded is-focused is-link level-right is-large">CV</a>
             </div>
         </footer>
     </section>
