--- a/secretsite.html
+++ b/secretsite.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" href="css/bulma.min.css">
-    <script src="js/jquery.min.js"></script>
-    <title>My Bulma Project</title>
+    <title>Hemmelig side</title>
 </head>
 <body>
 <!--     <nav class="navbar">
@@ -62,7 +61,7 @@
         <footer class="footer">
             <div class="content has-text-centered level">
                 <a href="pdf/SebastianSlangerup-Ansøgning.pdf" target="_blank" class="button is-rounded is-focused is-link level-left is-large">Ansøgning</a>
-                <a href="pdf/SebastianSlangerup-CV.pdf" class="button is-rounded is-focused is-link level-right is-large">CV</a>
+                <a href="pdf/SebastianSlangerup-CV.pdf" target="_blank" class="button is-rounded is-focused is-link level-right is-large">CV</a>
             </div>
         </footer>
     </section>
